[tool.poetry]
name = "conflow"
version = "0.1.0"
description = "CLI tool for creating Confluence pages from templates"
authors = ["Brandon Townes <btownes@appliedintuition.com>"]
readme = "README.md"
packages = [{include = "conflow", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
atlassian-python-api = "^3.41.0"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.12.0"

[tool.poetry.scripts]
conflow = "conflow.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
